// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages / Browse / components / SearchField Check search field should render with initial search query 1`] = `
<SearchField
  fetchSuggestions={[MockFunction]}
  name="search"
  openScanner={[MockFunction]}
  pageId="1234"
  query="foo"
  showScannerIcon={false}
  submitSearch={[MockFunction]}
>
  <div
    className="theme__browse__search-field"
    data-test-id="SearchField"
  >
    <div
      className="sg-15v3opi-container"
    >
      <div
        className="sg-19czy0f-inputWrapper"
      >
        <form
          action="."
          onSubmit={[Function]}
        >
          <label
            className="sg-1t1ulwt-label"
            htmlFor="search"
          >
            <div
              className="sg-1xxaa1m-icon"
            >
              <MagnifierIcon />
            </div>
          </label>
          <_default
            autoComplete={false}
            className="sg-3x1c7n-input"
            onChange={[Function]}
            onFocusChange={[Function]}
            onSubmit={[Function]}
            setRef={[Function]}
            type="search"
            value="foo"
          >
            <SimpleInput
              attributes={null}
              autoComplete={false}
              autoCorrect={false}
              className="sg-3x1c7n-input"
              disabled={false}
              id={null}
              inputComponent="input"
              isControlled={false}
              maxLength=""
              name={null}
              onChange={[Function]}
              onFocusChange={[Function]}
              onKeyPress={[Function]}
              onSanitize={[Function]}
              onSubmit={[Function]}
              onValidate={[Function]}
              password={false}
              required={false}
              setRef={[Function]}
              type="search"
              validateOnBlur={true}
              value="foo"
            >
              <input
                autoComplete="off"
                autoCorrect="off"
                className="sg-3x1c7n-input simpleInput common__simple-input"
                disabled={false}
                id={null}
                inputMode={null}
                maxLength=""
                min={null}
                name={null}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={null}
                onKeyPress={[Function]}
                pattern={null}
                required={false}
                step={null}
                type="search"
                value="foo"
              />
            </SimpleInput>
          </_default>
        </form>
      </div>
      <div>
        <button
          aria-hidden={true}
          className="sg-1j0scw0-button-hidden"
          data-test-id="search-field-cancel"
          onClick={[Function]}
          type="button"
        >
          <Text
            string="search.cancel"
          >
            I18n.Text
          </Text>
        </button>
      </div>
    </div>
    <Component
      bottomHeight={0}
      onClick={[Function]}
      searchPhrase="foo"
      visible={false}
    />
  </div>
</SearchField>
`;

exports[`pages / Browse / components / SearchField Check search field should show suggestions when focused 1`] = `
<SearchField
  fetchSuggestions={[MockFunction]}
  name="search"
  openScanner={[MockFunction]}
  pageId="1234"
  query="foo"
  showScannerIcon={false}
  submitSearch={[MockFunction]}
>
  <div
    className="theme__browse__search-field"
    data-test-id="SearchField"
  >
    <div
      className="sg-15v3opi-container"
    >
      <div
        className="sg-19czy0f-inputWrapper"
      >
        <form
          action="."
          onSubmit={[Function]}
        >
          <label
            className="sg-1t1ulwt-label"
            htmlFor="search"
          >
            <div
              className="sg-1xxaa1m-icon"
            >
              <MagnifierIcon />
            </div>
          </label>
          <_default
            autoComplete={false}
            className="sg-3x1c7n-input"
            onChange={[Function]}
            onFocusChange={[Function]}
            onSubmit={[Function]}
            setRef={[Function]}
            type="search"
            value="foo"
          >
            <SimpleInput
              attributes={null}
              autoComplete={false}
              autoCorrect={false}
              className="sg-3x1c7n-input"
              disabled={false}
              id={null}
              inputComponent="input"
              isControlled={false}
              maxLength=""
              name={null}
              onChange={[Function]}
              onFocusChange={[Function]}
              onKeyPress={[Function]}
              onSanitize={[Function]}
              onSubmit={[Function]}
              onValidate={[Function]}
              password={false}
              required={false}
              setRef={[Function]}
              type="search"
              validateOnBlur={true}
              value="foo"
            >
              <input
                autoComplete="off"
                autoCorrect="off"
                className="sg-3x1c7n-input simpleInput common__simple-input"
                disabled={false}
                id={null}
                inputMode={null}
                maxLength=""
                min={null}
                name={null}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={null}
                onKeyPress={[Function]}
                pattern={null}
                required={false}
                step={null}
                type="search"
                value="foo"
              />
            </SimpleInput>
          </_default>
        </form>
      </div>
      <div>
        <button
          aria-hidden={false}
          className="sg-3q8uc0-button"
          data-test-id="search-field-cancel"
          onClick={[Function]}
          type="button"
        >
          <Text
            string="search.cancel"
          >
            I18n.Text
          </Text>
        </button>
      </div>
    </div>
    <div
      className="sg-1lsj22t-overlay"
    />
    <Component
      bottomHeight={0}
      onClick={[Function]}
      searchPhrase="foo"
      visible={true}
    />
  </div>
</SearchField>
`;
